--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -80,6 +80,7 @@ const fontSettings = fontRules(settings.menu.typography);
     top: var(--menuHeight);
     left: 0px;
     right: 0px;
+    bottom:0;
     display: flex;
     flex-direction: column;
     background-color: var(--menuDropdownColor);
@@ -125,7 +126,7 @@ const fontSettings = fontRules(settings.menu.typography);
   }
   .menu-mobile-hidden {
     transform: translateY(-50px);
-    /* height: 0px; */
+  
     opacity: 0;
     pointer-events: none;
     transition: all 0.3s;
@@ -138,14 +139,30 @@ const fontSettings = fontRules(settings.menu.typography);
     background-color: var(--dropdownHoverColor);
   }
 
-    #menu-toggle:hover,
-#menu-toggle:focus{
+    #menu-toggle:hover
+{
   background-color: var(--mainHoverColor);
 
 }
 
+.menu-hide-bar .menu-main-group{
+    pointer-events:initial;
+  }
+  .menu-hide-bar #menu-toggle{
+    pointer-events: all;
+  }
+  .menu-hide-bar .menu-main-group{
+    position: fixed;
+    top:0;
+  }
  
 </style>
+{settings.menu.position.value.hideBar&& (<style>
+  header{
+    pointer-events: none;
+  }
+
+  </style>)}
 {!settings.menu.position.value.alwaysDropdown && <style>
    @media screen and (min-width: 768px) {
     .menu-mobile-hidden {
@@ -238,7 +255,7 @@ const fontSettings = fontRules(settings.menu.typography);
     }
   }</style>}
 
-<nav class="menu-main">
+<nav class:list={["menu-main",settings.menu.position.value.hideBar&&"menu-hide-bar"]}>
   {
     settings.menu.position.value.menuBarText && (
       <div class="top-bar-text-wrapper">
