--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -10,6 +10,7 @@ const fontSettings = fontRules(settings.menu.typography);
 ---
 
 <style
+is:global
   define:vars={{
     menuBackgroundColor: settings.menu.colors.backgroundColor,
     menuDropdownColor: settings.menu.colors.dropdownColor,
@@ -197,7 +198,7 @@ const fontSettings = fontRules(settings.menu.typography);
     }
     .menu-main {
       flex-grow: 1;
-      justify-content: space-between;
+      justify-content: flex-end;
       position: relative;
       z-index: 100;
     }
