Revert "adds prop for topbar side spacing"
This reverts commit c108c795c4ebc859330c498a5b4f8fa25b0c7fb8.

--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -16,7 +16,6 @@ is:global
     menuDropdownColor: settings.menu.colors.dropdownColor,
     mainHoverColor: settings.menu.colors.menuHoverColor,
     dropdownHoverColor: settings.menu.colors.dropdownHoverColor,
-    menuSidePadding:settings.menu.sizes.topBarPadding,
     ...fontSettings,
   }}
 >
@@ -65,7 +64,6 @@ is:global
     display: flex;
     align-items: center;
     padding: 0 0.5rem;
-    padding-left:var(--menuSidePadding);
   }
 
   .menu-main {
@@ -81,7 +79,6 @@ is:global
   .menu-main-group {
     position: fixed;
     top: var(--menuHeight);
-    padding-right: var(--menuSidePadding);
     left: 0px;
     right: 0px;
     bottom:0;
@@ -163,7 +160,6 @@ is:global
   .menu-hide-bar #menu-toggle{
     pointer-events: all;
   }
-
   .menu-hide-bar .menu-main-group{
     position: fixed;
     top:0;
@@ -266,13 +262,11 @@ is:global
     .menu-item:focus {
       background-color: var(--mainHoverColor);
     }
-
-  
   }</style>}
 
 <nav class:list={["menu-main",settings.menu.position.value.hideBar&&settings.menu.position.value.alwaysDropdown &&"menu-hide-bar"]}>
   {
-    settings.menu.position.value.menuBarText && !settings.menu.position.value.hideBar && (
+    settings.menu.position.value.menuBarText && (
       <div class="top-bar-text-wrapper">
         <p class="top-bar-text">{settings.menu.position.value.menuBarText}</p>
       </div>
