--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -10,7 +10,6 @@ const fontSettings = fontRules(settings.menu.typography);
 ---
 
 <style
-is:global
   define:vars={{
     menuBackgroundColor: settings.menu.colors.backgroundColor,
     menuDropdownColor: settings.menu.colors.dropdownColor,
@@ -201,7 +200,7 @@ is:global
     }
     .menu-main {
       flex-grow: 1;
-      justify-content: flex-end;
+      justify-content: space-between;
       position: relative;
       z-index: 100;
     }
