--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -80,7 +80,7 @@ const fontSettings = fontRules(settings.menu.typography);
     top: var(--menuHeight);
     left: 0px;
     right: 0px;
-    bottom:0;
+  
     display: flex;
     flex-direction: column;
     background-color: var(--menuDropdownColor);
@@ -163,29 +163,21 @@ const fontSettings = fontRules(settings.menu.typography);
     position: fixed;
     top:0;
   }
- 
-</style>
-{settings.menu.position.value.hideBar&&settings.menu.position.value.alwaysDropdown && (<style>
-  header{
-    pointer-events: none;
-  }
 
-  </style>)}
-{!settings.menu.position.value.alwaysDropdown && <style>
-   @media screen and (min-width: 768px) {
-    .menu-mobile-hidden {
+    @media screen and (min-width: 768px) {
+    .menu-switchable .menu-mobile-hidden {
       display: flex;
       opacity: 1;
       pointer-events: all;
       transform: none;
     }
-    #menu-toggle {
+  .menu-switchable   #menu-toggle {
       display: none;
     }
-    .menu-main button {
+ .menu-switchable.menu-main button {
       display: inline;
     }
-    .menu-main-group {
+ .menu-switchable    .menu-main-group {
       display: flex;
       align-items: stretch;
       justify-content: flex-end;
@@ -198,58 +190,58 @@ const fontSettings = fontRules(settings.menu.typography);
       position: static;
       background: none;
     }
-    .menu-main {
+   .menu-switchable.menu-main {
       flex-grow: 1;
       justify-content: space-between;
       position: relative;
       z-index: 100;
     }
 
-    .menu-submenu {
+  .menu-switchable   .menu-submenu {
       position: absolute;
       overflow: hidden;
       top: 100%;
       transition: all 0.3s;
       gap: 1rem;
     }
-    .menu-submenu-item-wrapper {
+  .menu-switchable   .menu-submenu-item-wrapper {
       display: inline-flex;
       flex-direction: column;
       padding: 0.5rem;
       transition: all 0.3s;
       background-color: var(--menuDropdownColor);
     }
-    .menu-submenu-item-wrapper a {
+  .menu-switchable   .menu-submenu-item-wrapper a {
       width: max-content;
     }
-    .dropdown-group {
+  .menu-switchable   .dropdown-group {
       position: relative;
       display: flex;
       /* border: 1px solid red; */
     }
-    .dropdown-button-wrapper {
+  .menu-switchable   .dropdown-button-wrapper {
       /* border: 1px solid red; */
       display: flex;
     }
-    .dropdown-button-wrapper a {
+  .menu-switchable   .dropdown-button-wrapper a {
       align-self: center;
       padding: 3px;
     }
-    .menu-dropdown-button {
+  .menu-switchable   .menu-dropdown-button {
       min-width: 30px;
       border: none;
       background-color: transparent;
     }
-    .dropdown-group-right .menu-submenu {
+   .menu-switchable  .dropdown-group-right .menu-submenu {
       right: 0;
     }
-    .submenu-hidden {
+   .menu-switchable  .submenu-hidden {
       height: 0px;
       opacity: 0;
       pointer-events: none;
       transition: all 0.3s;
     }
-    .submenu-hidden .menu-submenu-item-wrapper {
+   .menu-switchable  .submenu-hidden .menu-submenu-item-wrapper {
       transform: translateY(-50px);
       height: 0px;
       opacity: 0;
@@ -257,13 +249,20 @@ const fontSettings = fontRules(settings.menu.typography);
       transition: all 0.3s;
     }
 
-    .menu-item:hover,
-    .menu-item:focus {
+   .menu-switchable  .menu-item:hover,
+   .menu-switchable  .menu-item:focus {
       background-color: var(--mainHoverColor);
     }
-  }</style>}
+  }
+</style>
+{settings.menu.position.value.hideBar && (<style>
+  header{
+    pointer-events: none;
+  }
 
-<nav class:list={["menu-main",settings.menu.position.value.hideBar&&settings.menu.position.value.alwaysDropdown &&"menu-hide-bar"]}>
+  </style>)}
+
+<nav class:list={["menu-main",settings.menu.position.value.hideBar&&settings.menu.position.value.alwaysDropdown &&"menu-hide-bar", !settings.menu.position.value.alwaysDropdown&&'menu-switchable']}>
   {
     settings.menu.position.value.menuBarText && (
       <div class="top-bar-text-wrapper">
