finishes layout of topbar nav

--- a/src/components/sitelayout/LayoutSwitcher.astro
+++ b/src/components/sitelayout/LayoutSwitcher.astro
@@ -43,7 +43,7 @@ switch (settings.position.discriminant) {
 
     window.addEventListener("click", (event) => {
       //@ts-ignore not sure why i need this but i do
-      if (!document.querySelector(".menu-main")?.contains(event.target)) {
+      if (!document.querySelector(".menu-main-group")?.contains(event.target)) {
         hideAllMenus();
         hideMobileMenu();
       }
@@ -52,7 +52,9 @@ switch (settings.position.discriminant) {
       //@ts-ignore not sure why i need this but i do
 
       if (
-        !document.querySelector(".menu-main")?.contains(event.relatedTarget)
+        !document
+          .querySelector(".menu-main-group")
+          ?.contains(event.relatedTarget)
       ) {
         hideAllMenus();
         hideMobileMenu();
