--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -85,11 +85,12 @@ const fontSettings = fontRules(settings.menu.typography);
     top: var(--menuHeight);
     left: 0px;
     right: 0px;
-    /* max-height: calc(100vh - var(--menuHeight)); */
+    max-height: calc(100vh - var(--menuHeight));
+    padding: 2rem;
     display: flex;
     flex-direction: column;
     background-color: var(--menuDropdownColor);
-    overflow: auto;
+    overflow-y: auto;
     z-index: 0;
     transform: none;
     transition: all 0.3s;
