fixes positioning of submenus on desktop

--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -194,6 +194,7 @@ const fontSettings = fontRules(settings.menu.typography);
       overflow: visible;
       position: static;
       background: none;
+      padding: 0;
       padding-right: var(--topBarSidePadding);
     }
     .menu-item {
