--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -78,7 +78,7 @@ fontSpecSets.forEach((pair) => {
         width: 100%;
         margin-left: auto;
         margin-right: auto;
-        padding: 0 var(--standardPadding);
+        padding: var(--standardPadding);
         max-width: var(--maxPageContentWidth);
         overflow-wrap: break-word;
       }
