fixes bug where floating edit blocks menu items in edit env

--- a/src/components/sitelayout/FloatingEdit.astro
+++ b/src/components/sitelayout/FloatingEdit.astro
@@ -27,6 +27,7 @@ if (isHomepage) {
     margin-right: auto;
     text-align: right;
     z-index: 9999;
+    pointer-events: none;
   }
 
   .floating-edit a {
@@ -34,7 +35,8 @@ if (isHomepage) {
     background-color: white;
     text-decoration: none;
     border: 1px solid black;
-    border-radius: .5em;
+    border-radius: 0.5em;
+    pointer-events: all;
   }
   .floating-edit a:hover {
     background-color: lightblue;
