--- a/src/components/sitelayout/Sidebar/SidebarNav.astro
+++ b/src/components/sitelayout/Sidebar/SidebarNav.astro
@@ -1,18 +1,175 @@
 ---
-import type { string } from "astro/zod";
 import menuItems from "../../helpers/menuItems";
 
 import { settings } from "../../helpers/settingsHelper";
+
+import { fontRules } from "../../helpers/fontRuleBuilder";
+
 const menuItemCount = menuItems.length;
+const fontSettings = fontRules(settings.menu.typography);
 ---
 
-<style>
-  /*  */
+<style
+  define:vars={{
+    topBarSidePadding: settings.menu.sizes.topBarPadding,
+    menuPadding: settings.menu.sizes.menuPadding,
+    menuBackgroundColor: settings.menu.colors.backgroundColor,
+    menuDropdownColor: settings.menu.colors.dropdownColor,
+    mainHoverColor: settings.menu.colors.menuHoverColor,
+    dropdownHoverColor: settings.menu.colors.dropdownHoverColor,
+    blurStyle: settings.menu.appearance.blurBehind ? "blur(100px)" : "none",
+    ...fontSettings,
+  }}
+>
+  /* type stuff */
+  .top-bar-text {
+    font-family: var(--menuText-fontFamily);
+    font-size: var(--menuText-fontSize);
+    font-weight: var(--menuText-fontWeight);
+    font-style: var(--menuText-fontStyle);
+    margin-top: var(--menuText-marginTop);
+    margin-bottom: var(--menuText-marginBottom);
+    color: var(--menuText-color);
+    line-height: var(--menuText-lineHeight);
+  }
+  .menu-item {
+    font-family: var(--menuMain-fontFamily);
+    font-size: var(--menuMain-fontSize);
+    font-weight: var(--menuMain-fontWeight);
+    font-style: var(--menuMain-fontStyle);
+    margin-top: var(--menuMain-marginTop);
+    margin-bottom: var(--menuMain-marginBottom);
+    color: var(--menuMain-color);
+    color: var(--menuSub-color);
+    line-height: var(--menuMain-lineHeight);
+  }
+  .submenu-item {
+    font-family: var(--menuSub-fontFamily);
+    font-size: var(--menuSub-fontSize);
+    font-weight: var(--menuSub-fontWeight);
+    font-style: var(--menuSub-fontStyle);
+    margin-top: var(--menuSub-marginTop);
+    margin-bottom: var(--menuSub-marginBottom);
+    color: var(--menuSub-color);
+    line-height: var(--menuSub-lineHeight);
+  }
+
+  /* skip link */
+  .skip-link {
+    position: absolute;
+    opacity: 0;
+    pointer-events: none;
+    background-color: white;
+    color: black;
+    padding: 1rem;
+  }
+  .skip-link:focus {
+    pointer-events: all;
+    opacity: 1;
+  }
+
+  .menu-item,
+  .submenu-item {
+    text-decoration: none;
+    display: block;
+  }
+  /* end type stuff */
+
+  .top-bar-text-wrapper {
+    flex-grow: 1;
+    flex-basis: content;
+    flex-shrink: 10;
+    display: flex;
+    align-items: center;
+    padding: 0 0.5rem;
+    padding-left: var(--topBarSidePadding);
+  }
+
+  .menu-main {
+    display: flex;
+    flex-direction: row;
+    padding: 0;
+    justify-content: flex-end;
+  }
+
+  .menu-main-group {
+    position: fixed;
+    top: var(--menuHeight);
+    left: 0px;
+    right: 0px;
+    max-height: calc(100vh - var(--menuHeight));
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    background-color: var(--menuDropdownColor);
+    overflow-y: auto;
+    z-index: 0;
+    transform: none;
+    transition: all 0.3s;
+  }
+  .menu-mobile-hidden {
+    transform: translateY(-50px);
+    opacity: 0;
+    pointer-events: none;
+    transition: all 0.3s;
+  }
+
+  .menu-submenu {
+    overflow: hidden;
+    z-index: -100;
+  }
+  .menu-submenu-item-wrapper {
+    display: flex;
+
+    flex-direction: column;
+    padding-left: 1rem;
+    font-size: 0.75rem;
+    gap: 0.25rem;
+  }
+  .menu-submenu a {
+    padding: 0.5rem 0;
+  }
+  .menu-dropdown-button {
+    display: none;
+  }
+  #menu-toggle {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border: none;
+    background: transparent;
+    width: calc(var(--menuHeight));
+    align-self: stretch;
+    min-height: var(--menuHeight);
+
+    /* aspect-ratio: 1/1; */
+  }
+  #menu-toggle span {
+    font-size: calc(var(--menuHeight) * 0.75);
+  }
+
+  .menu-item:hover,
+  .submenu-item:hover,
+  .menu-item:focus,
+  .submenu-item:focus {
+    background-color: var(--dropdownHoverColor);
+  }
+
+  #menu-toggle:hover {
+    background-color: var(--mainHoverColor);
+  }
+
+  #menu-toggle,
+  .menu-dropdown-button {
+    color: var(--menuMain-color);
+  }
+
+  /* begin sidebar styles */
   .menu-main {
     /* background-color: aquamarine; */
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+
     align-items: stretch;
     padding: 0;
     position: relative;
@@ -27,7 +184,7 @@ const menuItemCount = menuItems.length;
     right: 0px;
     display: flex;
     flex-direction: column;
-    background-color: lightblue;
+
     overflow: hidden;
     z-index: -10;
     transform: none;
@@ -55,13 +212,6 @@ const menuItemCount = menuItems.length;
   .site-title {
     flex-grow: 1;
   }
-  .menu-mobile-hidden {
-    transform: translateY(-50px);
-    /* height: 0px; */
-    opacity: 0;
-    pointer-events: none;
-    transition: all 0.3s;
-  }
 
   @media screen and (min-width: 768px) {
     .site-title {
@@ -83,90 +233,49 @@ const menuItemCount = menuItems.length;
     }
     .menu-main {
       position: static;
+      flex-direction: column;
+
+      justify-content: flex-start;
+      padding: var(--menuPadding);
     }
     .menu-main-group {
       position: static;
+      background-color: transparent;
       overflow: visible;
     }
+    .menu-item,
+    .submenu-item {
+      color: var(--menuText-color);
+    }
+    .menu-item:hover,
+    .submenu-item:hover {
+      background-color: var(--mainHoverColor);
+    }
+    .top-bar-text-wrapper {
+      padding-left: 0;
+      flex-grow: 0;
+    }
   }
-  /*
-    .menu-mobile-hidden {
-      display: flex;
-      opacity: 1;
-      pointer-events: all;
-      transform: none;
-    }
-    #menu-toggle {
-      display: none;
-    }
-    .menu-main button {
-      display: inline;
-    }
-    .menu-main-group {
-      display: flex;
-      align-items: stretch;
-      flex-direction: row;
-      gap: 1rem;
-      position: static;
-    }
-    .menu-main {
-      justify-content: center;
-      position: relative;
-      z-index: 100;
-    }
-    .menu-submenu {
-      position: absolute;
-
-      top: 45px;
-      display: inline-flex;
-      flex-direction: column;
-      gap: 1rem;
-      background-color: lightblue;
-      padding: 0.5rem;
-      transition: all 0.3s;
-    }
-    .menu-submenu a {
-      width: max-content;
-    }
-    .dropdown-group {
-      position: relative;
-      display: flex;
-      
-    }
-    .dropdown-button-wrapper {
-     
-      display: flex;
-    }
-    .dropdown-button-wrapper a {
-      align-self: center;
-      padding: 3px;
-    }
-    .menu-dropdown-button {
-      min-width: 30px;
-    }
-    .dropdown-group-right .menu-submenu {
-      right: 0;
-    }
-    .submenu-hidden {
-      transform: translateY(-50px);
-      height: 0px;
-      opacity: 0;
-      pointer-events: none;
-      transition: all 0.3s;
-    }
-  } */
 </style>
 
 <nav class="menu-main">
-  <div class="menu-mobile-bar">
-    <p class="site-title">Site Title</p>
-    <button id="menu-toggle">Menu</button>
-  </div>
+  {
+    settings.menu.siteTitle && (
+      <div class="top-bar-text-wrapper">
+        <p class="top-bar-text">{settings.menu.siteTitle}</p>
+      </div>
+    )
+  }
+  <a class="skip-link" href="#main-content">Skip to main content</a>
+
+  <button id="menu-toggle"
+    ><span class="material-icons-outlined">menu</span></button
+  >
 
   <div class="menu-main-group menu-mobile-hidden">
     {
       menuItems.map((item, index) => {
-        const isRightSide = index * 2 > menuItemCount;
+        const isRightSide = (index + 1) * 2 >= menuItemCount;
         if (item.subItems.length > 0) {
           return (
             <>
@@ -177,23 +286,46 @@ const menuItemCount = menuItems.length;
                 ]}
               >
                 <div class="dropdown-button-wrapper">
-                  <a href={item.url} data-menu-id={item.groupID}>
+                  <a
+                    class="menu-item"
+                    href={item.url}
+                    data-menu-id={item.groupID}
+                  >
                     {item.title}
                   </a>
+                  <button
+                    class="menu-dropdown-button"
+                    data-menu-id={item.groupID}
+                    aria-controls={item.groupID}
+                  >
+                    <span class="material-icons-outlined">arrow_drop_down</span>
+                  </button>
                 </div>
 
                 <div class="menu-submenu submenu-hidden" id={item.groupID}>
-                  {item.subItems.map(
-                    (subItem: { url: string; title: string }) => {
-                      return <a href={subItem.url}>{subItem.title}</a>;
-                    }
-                  )}
+                  <div class="menu-submenu-item-wrapper">
+                    {item.subItems.map(
+                      (subItem: { url: string; title: string }) => {
+                        return (
+                          <a class="submenu-item" href={subItem.url}>
+                            {subItem.title}
+                          </a>
+                        );
+                      }
+                    )}
+                  </div>
                 </div>
               </div>
             </>
           );
         } else {
-          return <a href={item.url}>{item.title}</a>;
+          return (
+            <div class="dropdown-button-wrapper">
+              <a class="menu-item" href={item.url}>
+                {item.title}
+              </a>
+            </div>
+          );
         }
       })
     }
