improves default styling for sidebar nav

--- a/src/components/sitelayout/Sidebar/SidebarNav.astro
+++ b/src/components/sitelayout/Sidebar/SidebarNav.astro
@@ -38,8 +38,8 @@ const fontSettings = fontRules(settings.menu.typography);
     font-size: var(--menuMain-fontSize);
     font-weight: var(--menuMain-fontWeight);
     font-style: var(--menuMain-fontStyle);
-    margin-top: var(--menuMain-marginTop);
-    margin-bottom: var(--menuMain-marginBottom);
+    padding-top: var(--menuMain-marginTop);
+    padding-bottom: var(--menuMain-marginBottom);
     color: var(--menuMain-color);
     color: var(--menuSub-color);
     line-height: var(--menuMain-lineHeight);
@@ -49,8 +49,8 @@ const fontSettings = fontRules(settings.menu.typography);
     font-size: var(--menuSub-fontSize);
     font-weight: var(--menuSub-fontWeight);
     font-style: var(--menuSub-fontStyle);
-    margin-top: var(--menuSub-marginTop);
-    margin-bottom: var(--menuSub-marginBottom);
+    padding-top: var(--menuSub-marginTop);
+    padding-bottom: var(--menuSub-marginBottom);
     color: var(--menuSub-color);
     line-height: var(--menuSub-lineHeight);
   }
@@ -120,9 +120,7 @@ const fontSettings = fontRules(settings.menu.typography);
     font-size: 0.75rem;
     gap: 0.25rem;
   }
-  .menu-submenu a {
-    padding: 0.5rem 0;
-  }
+
   .menu-dropdown-button {
     display: none;
   }
