--- a/src/components/sitelayout/Topbar/TopbarNav.astro
+++ b/src/components/sitelayout/Topbar/TopbarNav.astro
@@ -190,7 +190,7 @@ const fontSettings = fontRules(settings.menu.typography);
     /* positions the site name and group of menu items */
     .menu-switchable.menu-main {
       flex-grow: 1;
-      justify-content: space-between;
+      justify-content: flex-end;
       position: relative;
       z-index: 100;
     }
