--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -4,6 +4,26 @@ import FloatingEdit from "../components/sitelayout/FloatingEdit.astro";
 const { title } = Astro.props;
 import { ViewTransitions } from "astro:transitions";
 import { settings } from "../components/helpers/settingsHelper";
+import { getImage } from "astro:assets";
+
+const imagePath = settings.general.favicon;
+const images = import.meta.glob<{ default: ImageMetadata }>(
+  "./../../**/*.{jpeg,jpg,png,gif}"
+);
+console.log(images);
+
+if (!images[imagePath]) {
+}
+let faviconSrc = "";
+if (images && images[imagePath]) {
+  const fancyImage = await getImage({
+    src: images[imagePath](),
+    width: 180,
+    height: 180,
+    format: "png",
+  });
+  faviconSrc = fancyImage.src;
+}
 
 const fontLinks = Object.values(settings.fonts)
   .map((fontObj) => {
@@ -35,7 +55,7 @@ fontSpecSets.forEach((pair) => {
     <meta charset="UTF-8" />
     <meta name="description" content="Astro description" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href={faviconSrc} />
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
     <ViewTransitions />
