--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -101,7 +101,7 @@ fontSpecSets.forEach((pair) => {
         width: 100%;
         margin-left: auto;
         margin-right: auto;
-        padding: var(--standardPadding);
+        padding: 0 var(--standardPadding);
         max-width: var(--maxPageContentWidth);
         overflow-wrap: break-word;
       }
