realigns floating edit button

--- a/src/components/sitelayout/FloatingEdit.astro
+++ b/src/components/sitelayout/FloatingEdit.astro
@@ -19,13 +19,11 @@ if (isHomepage) {
 
 <style>
   .floating-edit {
-    font-size: 0.75rem;
     position: fixed;
-
+    display: flex;
     bottom: 1rem;
-    right: 1rem;
+    left: 1rem;
 
-    text-align: right;
     z-index: 9999;
     pointer-events: none;
   }
